autocomplete with local valueset